--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </h2>
                 <ul class="destinations-list">
                     <li class="destinations-item">
-                        <img src="img/image2.png" alt="">
+                        <img class="destination-img" src="img/image2.png" alt="">
                         <h3 class="destinations-subtitle">
                             Maldives
                         </h3>
@@ -87,7 +87,7 @@
                         <a class="destinations-link" href="destination-one.html">book now</a>
                     </li>
                     <li class="destinations-item">
-                        <img src="img/image3.png" alt="">
+                        <img class="destination-img"  src="img/image3.png" alt="">
                         <h3 class="destinations-subtitle">
                             Indonesia
                         </h3>
@@ -97,7 +97,7 @@
                         <a class="destinations-link" href="destination-two.html">book now</a>
                     </li>
                     <li class="destinations-item">
-                        <img src="img/image4.png" alt="">
+                        <img class="destination-img"  src="img/image4.png" alt="">
                         <h3 class="destinations-subtitle">
                             Australia
                         </h3>
