--- a/article-one.html
+++ b/article-one.html
@@ -13,8 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/article.css">
+        <link rel="stylesheet" href="css/main.min.css">
 </head>
 <body>
     <header class="header">
@@ -56,11 +55,12 @@
         </div>
     </header>
     <main class="main">
+        <section class="article-one">
         <div class="container">
             <h1 class="article-title">
                 New Caledonia: The Lagoon of All Hopes
             </h1>
-            <div class="article-wrap">
+            <div class="article-wrapper">
                 <div>
                     <p class="article-text">
                         I quickly wondered why the lagoon of New Caledonia remains rather unknown internationally while
@@ -92,6 +92,7 @@
                 <img class="article-img" src="./img/scuba-article-img.webp" alt="">
             </div>
         </div>
+    </section>
     </main>
     <footer class="footer" id="footer">
         <div class="container">
