--- a/article-three.html
+++ b/article-three.html
@@ -13,8 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/article.css">
+    <link rel="stylesheet" href="css/main.min.css">
 </head>
 
 <body>
@@ -57,87 +56,93 @@
         </div>
     </header>
     <main class="main">
-        <div class="container">
-            <h1 class="article-title">
-                Shore diving in Maui: Hawaii’s best-kept secret
-            </h1>
-            <p class="article-text">
-                This post may contain affiliate links. It means I may earn a commission if you book or purchase
-                something.
-                This is at no cost to you and support this website.
-            </p>
-            <p class="article-text">
-                The Hawaiian Archipelago is full of bucket list dives with exciting adventures such as diving in the
-                crater
-                of a volcano or night diving with manta rays, but all of these scuba diving trips come at a high price
-                tag.
-                To be clear, I have rarely paid so much for a dive. At the same time, I was not expecting I could go
-                shore
-                diving in Maui by only renting a tank for only 5 dollars at such an expensive diving location like
-                Hawaii.
-                Diving in Maui is full of surprises… good surprises!
-            </p>
-            <ul class="gallery-list">
-                <li class="gallery-item">
-                    <img class="gallery-img" src="./img/fish1.webp" alt="">
-                </li>
-                <li class="gallery-item">
-                    <img class="gallery-img" src="./img/fish2.webp" alt="">
-                </li>
-                <li class="gallery-item">
-                    <img class="gallery-img" src="./img/fish3.webp" alt="">
-                </li>
-                <li class="gallery-item">
-                    <img class="gallery-img" src="./img/fish4.webp" alt="">
-                </li>
-                <li class="gallery-item">
-                    <img class="gallery-img" src="./img/fish5.webp" alt="">
-                </li>
-                <li class="gallery-item">
-                    <img class="gallery-img" src="./img/turtle2.webp" alt="">
-                </li>
-            </ul>
-            <h2 class="article-title">
-                Other shore dive sites in Maui to consider
-            </h2>
-            <img class="article-hotel" src="./img/hotel.webp" alt="">
-            <p class="article-text">
-                With 40 shore dive sites, the greatest number of the Hawaiian islands, Maui is definitely the best place
-                to shore dive in Hawaii. If you take into account the nearby dive sites of Molokini and Lanai, I believe
-                Maui is just the best island for scuba divers visiting Hawaii.
-            </p>
-            <p class="article-text">
-                Here is a selection of other dive sites of Maui, don’t hesitate to ask local dive centres when you rent
-                your tanks, they will be happy to help with a briefing and maybe a dive map.
-            </p>
-            <ul class="article-list">
-                <li class="article-item">
-                    <p class="item-text">
-                        Honolua Bay
-                    </p>
-                </li>
-                <li class="article-item">
-                    <p class="item-text">
-                        Kapalua Bay
-                    </p>
-                </li>
-                <li class="article-item">
-                    <p class="item-text">
-                        Old Airport
-                    </p>
-                </li>
-                <li class="article-item">
-                    <p class="item-text">
-                        Wailea Beach
-                    </p>
-                </li>
-                <li class="article-item">
-                    <p class="item-text">
-                        Makena Landing
-                    </p>
-                </li>
-            </ul>
-        </div>
+        <section class="article-three">
+            <div class="container">
+                <h1 class="article-title">
+                    Shore diving in Maui: Hawaii’s best-kept secret
+                </h1>
+                <p class="article-text">
+                    This post may contain affiliate links. It means I may earn a commission if you book or purchase
+                    something.
+                    This is at no cost to you and support this website.
+                </p>
+                <p class="article-text">
+                    The Hawaiian Archipelago is full of bucket list dives with exciting adventures such as diving in the
+                    crater
+                    of a volcano or night diving with manta rays, but all of these scuba diving trips come at a high
+                    price
+                    tag.
+                    To be clear, I have rarely paid so much for a dive. At the same time, I was not expecting I could go
+                    shore
+                    diving in Maui by only renting a tank for only 5 dollars at such an expensive diving location like
+                    Hawaii.
+                    Diving in Maui is full of surprises… good surprises!
+                </p>
+                <ul class="gallery-list">
+                    <li class="gallery-item">
+                        <img class="gallery-img" src="./img/fish1.webp" alt="">
+                    </li>
+                    <li class="gallery-item">
+                        <img class="gallery-img" src="./img/fish2.webp" alt="">
+                    </li>
+                    <li class="gallery-item">
+                        <img class="gallery-img" src="./img/fish3.webp" alt="">
+                    </li>
+                    <li class="gallery-item">
+                        <img class="gallery-img" src="./img/fish4.webp" alt="">
+                    </li>
+                    <li class="gallery-item">
+                        <img class="gallery-img" src="./img/fish5.webp" alt="">
+                    </li>
+                    <li class="gallery-item">
+                        <img class="gallery-img" src="./img/turtle2.webp" alt="">
+                    </li>
+                </ul>
+                <h2 class="article-title">
+                    Other shore dive sites in Maui to consider
+                </h2>
+                <img class="article-hotel" src="./img/hotel.webp" alt="">
+                <p class="article-text">
+                    With 40 shore dive sites, the greatest number of the Hawaiian islands, Maui is definitely the best
+                    place
+                    to shore dive in Hawaii. If you take into account the nearby dive sites of Molokini and Lanai, I
+                    believe
+                    Maui is just the best island for scuba divers visiting Hawaii.
+                </p>
+                <p class="article-text">
+                    Here is a selection of other dive sites of Maui, don’t hesitate to ask local dive centres when you
+                    rent
+                    your tanks, they will be happy to help with a briefing and maybe a dive map.
+                </p>
+                <ul class="article-list">
+                    <li class="article-item">
+                        <p class="item-text">
+                            Honolua Bay
+                        </p>
+                    </li>
+                    <li class="article-item">
+                        <p class="item-text">
+                            Kapalua Bay
+                        </p>
+                    </li>
+                    <li class="article-item">
+                        <p class="item-text">
+                            Old Airport
+                        </p>
+                    </li>
+                    <li class="article-item">
+                        <p class="item-text">
+                            Wailea Beach
+                        </p>
+                    </li>
+                    <li class="article-item">
+                        <p class="item-text">
+                            Makena Landing
+                        </p>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
     <footer class="footer" id="footer">
         <div class="container">
