--- a/article-two.html
+++ b/article-two.html
@@ -13,8 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/article.css">
+        <link rel="stylesheet" href="css/main.min.css">
 </head>
 
 <body>
@@ -57,6 +56,7 @@
         </div>
     </header>
     <main class="main">
+        <section class="article-two">
         <div class="container">
             <h1 class="article-title">
                 Scuba diving in Okinawa: a first-timer guide
@@ -87,6 +87,7 @@
                 sense!
             </p>
         </div>
+    </section>
     </main>
     <footer class="footer" id="footer">
         <div class="container">
